# scip-backend

./: NEWS.md  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  python-ci.yml  python-formatting.yml
docker/: Dockerfile
docs/source/: conf.py  conf.py~  index.rst  index.rst~  overview.rst  overview.rst~
docs/source/api/: population.rst  region.rst  region.rst~  taxon.rst
scip/: __init__.py  routes.py  wsgi.py
scip/api/: __init__.py  population.py  projection.py  region.py  region_helpers.py  taxon.py  validators.py
tests/: conftest.py  sample_data.py  test_population.py  test_region.py  test_taxon.py  test_trivial.py  test_validators.py
